--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "import numpy as np"
    ]
   },
   {
@@ -31,9 +32,22 @@
    "execution_count": 2,
    "id": "43bf04a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.07142857 0.14285714 0.21428571 0.28571429 0.35714286\n",
+      " 0.42857143 0.5        0.57142857 0.64285714 0.71428571 0.78571429\n",
+      " 0.85714286 0.92857143 1.        ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "sequence = np.linspace(0, 1, 15)\n",
+    "\n",
+    "print(sequence)"
    ]
   },
   {
@@ -57,9 +71,29 @@
    "execution_count": 3,
    "id": "c1c3f9dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1.1  2.1  3.1]\n",
+      "  [ 4.1  5.1  6.1]]\n",
+      "\n",
+      " [[ 7.1  8.1  9.1]\n",
+      "  [10.1 11.1 12.1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "arr1 = np.array([1.1, 2.1, 3.1])\n",
+    "arr2 = np.array([4.1, 5.1, 6.1])\n",
+    "arr3 = np.array([7.1, 8.1, 9.1])\n",
+    "arr4 = np.array([10.1, 11.1, 12.1])\n",
+    "\n",
+    "arrays = np.array([[arr1, arr2], [arr3, arr4]])\n",
+    "\n",
+    "print(arrays)"
    ]
   },
   {
@@ -81,9 +115,44 @@
    "execution_count": 4,
    "id": "6e90d6a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array's type:\n",
+      "float64\n",
+      "\n",
+      "Array's elements datatype:\n",
+      "8\n",
+      "\n",
+      "Array's shape:\n",
+      "(2, 2, 3)\n",
+      "\n",
+      "Array's size:\n",
+      "12\n",
+      "\n",
+      "Array's dimension:\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "print(\"Array's type:\")\n",
+    "print(arrays.dtype)\n",
+    "\n",
+    "print(\"\\nArray's elements datatype:\")\n",
+    "print(arrays.itemsize)\n",
+    "\n",
+    "print(\"\\nArray's shape:\")\n",
+    "print(arrays.shape)\n",
+    "\n",
+    "print(\"\\nArray's size:\")\n",
+    "print(arrays.size)\n",
+    "\n",
+    "print(\"\\nArray's dimension:\")\n",
+    "print(arrays.ndim)"
    ]
   },
   {
@@ -99,12 +168,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "e9f5c88c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New array's dimension:  3\n",
+      "New array's shape:  (2, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "new_arrays = np.reshape(arrays, (2, 2, 3))\n",
+    "\n",
+    "# Print the new array's dimension and shape\n",
+    "print(\"New array's dimension: \", new_arrays.ndim)\n",
+    "print(\"New array's shape: \", new_arrays.shape)"
    ]
   },
   {
@@ -121,12 +204,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "8135b045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3]\n",
+      "  [ 4  5  6]]\n",
+      "\n",
+      " [[ 7  8  9]\n",
+      "  [10 11 12]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "new_arr_int = new_arrays.astype(int)\n",
+    "\n",
+    "# Print the new array\n",
+    "print(new_arr_int)"
    ]
   },
   {
@@ -142,12 +241,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "a0d58d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "for element in np.nditer(new_arr_int):\n",
+    "    print(element)"
    ]
   },
   {
@@ -161,12 +281,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "6e12e2d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "print(new_arr_int[0, 1, 1])"
    ]
   },
   {
@@ -180,12 +309,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "c3218bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "print(new_arr_int[0, 0, 1])\n",
+    "print(new_arr_int[0, 1, 2])"
    ]
   },
   {
@@ -203,12 +343,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "ddaf0146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([1], dtype=int64), array([0], dtype=int64), array([1], dtype=int64))\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "index = np.where(new_arr_int == 8)\n",
+    "print(index)"
    ]
   },
   {
@@ -231,12 +381,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "d9b632bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2]\n",
+      "  [ 3  4]\n",
+      "  [ 5  6]]\n",
+      "\n",
+      " [[ 7  8]\n",
+      "  [ 9 10]\n",
+      "  [11 12]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "reshaped_array = new_arr_int.reshape((2, 3, 2))\n",
+    "\n",
+    "print(reshaped_array)"
    ]
   },
   {
@@ -252,12 +419,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
+   "id": "7d6b550c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B' 'C' 'D']\n",
+      " ['E' 'F' 'G' 'H']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q12: write your code here ^_^\n",
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined_array = np.concatenate((arr1, arr2), axis=1)\n",
+    "\n",
+    "print(joined_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "d6acdeaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B']\n",
+      " ['E' 'F']\n",
+      " ['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# Q12.1: write your code here ^_^\n",
+    "joined_array = np.concatenate((arr1, arr2))\n",
+    "\n",
+    "print(joined_array)"
    ]
   },
   {
@@ -270,12 +476,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "b849658c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B' 'C' 'D']\n",
+      " ['E' 'F' 'G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# Q12.2: write your code here ^_^\n",
+    "joined_array = np.concatenate((arr1, arr2), axis=1)\n",
+    "\n",
+    "print(joined_array)"
    ]
   },
   {
@@ -289,12 +507,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "7f7f5e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Split array 1:\n",
+      "[['A' 'B']\n",
+      " ['E' 'F']]\n",
+      "\n",
+      "Split array 2:\n",
+      "[['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "split_array1, split_array2 = np.split(np.concatenate((arr1, arr2), axis=1), 2, axis=1)\n",
+    "\n",
+    "print(\"Split array 1:\")\n",
+    "print(split_array1)\n",
+    "\n",
+    "print(\"\\nSplit array 2:\")\n",
+    "print(split_array2)"
    ]
   }
  ],
@@ -314,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
