--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "212fd1ba",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3307454f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "x = np.ones((3, 3))\n",
+    "print(x)"
    ]
   },
   {
@@ -38,12 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "9550b063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "y = np.zeros((3, 3))\n",
+    "print(y)"
    ]
   },
   {
@@ -56,12 +82,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "71070d1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "z = x + y\n",
+    "print(z)"
    ]
   },
   {
@@ -74,12 +113,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "32627c83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimension: 2\n",
+      "The shape is : (3, 3)\n",
+      "The size is : 9\n",
+      "The type is : <class 'numpy.ndarray'>\n",
+      "The elemnts type is : float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "print(\"Dimension:\", x.ndim)               \n",
+    "print(\"The shape is :\", x.shape)\n",
+    "print(\"The size is :\", x.size)\n",
+    "print(\"The type is :\", type(x))\n",
+    "print(\"The elemnts type is :\", x.dtype)"
    ]
   },
   {
@@ -98,12 +155,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "b9c7bbb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12]\n",
+      " [13 14]\n",
+      " [15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "w = np.array([[11, 12], \n",
+    "              [13, 14], \n",
+    "              [15, 16]])\n",
+    "print(w)"
    ]
   },
   {
@@ -116,12 +188,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "cee8aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "z = np.array(([[1],\n",
+    "               [2],\n",
+    "               [3]]))\n",
+    "print(z)"
    ]
   },
   {
@@ -134,12 +220,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "d218f892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1 11 12]\n",
+      " [ 2 13 14]\n",
+      " [ 3 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "newArray = np.hstack((z, w))         # Combine z and w horizontally\n",
+    "\n",
+    "print(newArray)\n"
    ]
   },
   {
@@ -152,12 +252,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "abbed923",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "11\n",
+      "12\n",
+      "2\n",
+      "13\n",
+      "14\n",
+      "3\n",
+      "15\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "for row in newArray:\n",
+    "    for element in row:\n",
+    "        print(element)"
    ]
   },
   {
@@ -170,12 +290,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "12e3f0db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The original array : \n",
+      " [[ 1 11 12]\n",
+      " [ 2 13 14]\n",
+      " [ 3 15 16]]\n",
+      "Reverse the columns : \n",
+      " [[ 3 15 16]\n",
+      " [ 2 13 14]\n",
+      " [ 1 11 12]]\n",
+      "Reverse the rows : \n",
+      " [[12 11  1]\n",
+      " [14 13  2]\n",
+      " [16 15  3]]\n",
+      "Reverse the columns and rows : \n",
+      " [[16 15  3]\n",
+      " [14 13  2]\n",
+      " [12 11  1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "print(\"The original array : \\n\", newArray)\n",
+    "\n",
+    "reversedArray = np.flip(newArray, axis=0)                  # Reverse the columns\n",
+    "print(\"Reverse the columns : \\n\", reversedArray) \n",
+    "\n",
+    "reversedArray = np.flip(newArray, axis=1)                     # Reverse the rows\n",
+    "print(\"Reverse the rows : \\n\", reversedArray)\n",
+    "\n",
+    "reversedArray = np.flip(np.flip(newArray, axis=0), axis=1)      # Reverse the columns and rows of newArray by using the axis 0 and 1\n",
+    "print(\"Reverse the columns and rows : \\n\", reversedArray)"
    ]
   },
   {
@@ -188,12 +342,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "aea004df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 10 11]\n",
+      " [ 1 12 13]\n",
+      " [ 2 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "newArray -= 1\n",
+    "print(newArray)"
    ]
   },
   {
@@ -206,12 +373,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "4ea08613",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Biggest Value is :  15\n",
+      "The Biggest Value is :  0\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "BiggestValue = newArray.max()\n",
+    "print(\"The Biggest Value is : \", BiggestValue)\n",
+    "\n",
+    "SmallestValue = newArray.min()\n",
+    "print(\"The Biggest Value is : \", SmallestValue)\n"
    ]
   },
   {
@@ -224,12 +406,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "73e3b5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 10 11]\n",
+      "[ 0 10 11]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "# we can use these tow Ways :\n",
+    "print(newArray[0])\n",
+    "print(newArray[0][::])\n"
    ]
   },
   {
@@ -242,12 +437,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "7ad660b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "print(newArray[1][1])  # the number 12 is in the second row \"so its in the index 1\", and in the second column \"in the index 1 also\""
    ]
   },
   {
@@ -260,12 +465,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "31fb5fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "print the number 0 at the index [0][0]:  0\n",
+      "print the number 13 at the index [1][2]:  13\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "print(\"print the number 0 at the index [0][0]: \", newArray[0][0])\n",
+    "print(\"print the number 13 at the index [1][2]: \", newArray[1][2])"
    ]
   },
   {
@@ -278,12 +495,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "35f224ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flattened array:\n",
+      "[ 0 10 11  1 12 13  2 14 15]\n",
+      "\n",
+      "2D array:\n",
+      "[[ 0]\n",
+      " [10]\n",
+      " [11]\n",
+      " [ 1]\n",
+      " [12]\n",
+      " [13]\n",
+      " [ 2]\n",
+      " [14]\n",
+      " [15]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "# we can use tow ways to do it :\n",
+    "newArray_flat = newArray.reshape(9,)        # Reshape newArray into a 1D array with 9 elements, called flattened array\n",
+    "print(\"Flattened array:\")\n",
+    "print(newArray_flat)\n",
+    "\n",
+    "newArray_2d = newArray.reshape(9, 1)         # Reshape newArray into a 2D array with 9 rows and 1 column\n",
+    "print(\"\\n2D array:\")\n",
+    "print(newArray_2d)"
    ]
   },
   {
@@ -291,17 +537,33 @@
    "id": "e6d104c5",
    "metadata": {},
    "source": [
-    "## Q#16: Change the shape of \"newArray\" to (3,2)."
+    "## Q#16: Change the shape of \"newArray\" to (3,3)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "724d51d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "3 x 3 array:\n",
+      "[[ 0 10 11]\n",
+      " [ 1 12 13]\n",
+      " [ 2 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "newArray_3x3 = newArray.reshape(3, 3)   \n",
+    "print(\"\\n3 x 3 array:\")\n",
+    "print(newArray_3x3)"
    ]
   },
   {
@@ -329,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
