--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -10,12 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "936d4703",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "import numpy                       # Import the numpy module\n",
+    "import numpy as np                  # Import the numpy module and create an alias 'np' for it\n",
+    "from numpy import array, reshape   # Import the 'array' and 'reshape' functions from numpy\n",
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -28,12 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "43bf04a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10.         10.35714286 10.71428571 11.07142857 11.42857143 11.78571429\n",
+      " 12.14285714 12.5        12.85714286 13.21428571 13.57142857 13.92857143\n",
+      " 14.28571429 14.64285714 15.        ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "sequence = np.linspace(10, 20, num = 15)        # the linspace function expected 3 params, 10 to 20 is the range of values \"start and stop\" and the 15 is the length \"num\" of the array\n",
+    "\n",
+    "print(sequence)"
    ]
   },
   {
@@ -54,12 +74,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "c1c3f9dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1.1  2.1  3.1]\n",
+      "  [ 4.1  5.1  6.1]]\n",
+      "\n",
+      " [[ 7.1  8.1  9.1]\n",
+      "  [10.1 11.1 12.1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "arr1 = np.array([1.1, 2.1, 3.1])                # Create the arrays\n",
+    "arr2 = np.array([4.1, 5.1, 6.1])\n",
+    "arr3 = np.array([7.1, 8.1, 9.1])\n",
+    "arr4 = np.array([10.1, 11.1, 12.1])\n",
+    "\n",
+    "newArray = np.array([arr1, arr2, arr3, arr4])     # Create the 3-D array\n",
+    "\n",
+    "newArray = newArray.reshape(2, 2, 3)               # Reshape the 3-D array to the desired shape (2, 2, 3)\n",
+    "\n",
+    "print(newArray)\n"
    ]
   },
   {
@@ -78,12 +123,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "6e90d6a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array type is: <class 'numpy.ndarray'>\n",
+      "Array elements datatype are: float64\n",
+      "Array shape is: (2, 2, 3)\n",
+      "Array size is: 12\n",
+      "Array dimension is : 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "print(\"Array type is:\", type(newArray))      # Print the array type\n",
+    "\n",
+    "print(\"Array elements datatype are:\", newArray.dtype)     # Print the array elements datatype\n",
+    "\n",
+    "print(\"Array shape is:\", newArray.shape)         # Print the array shape\n",
+    "\n",
+    "print(\"Array size is:\", newArray.size)           # Print the array size\n",
+    "\n",
+    "print(\"Array dimension is :\", newArray.ndim)      # Print the array dimensions"
    ]
   },
   {
@@ -99,12 +167,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "e9f5c88c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New array's dimension: 4\n",
+      "New array's shape: (1, 2, 2, 3)\n",
+      "The 4 Dimenations araay : \n",
+      " [[[[ 1.1  2.1  3.1]\n",
+      "   [ 4.1  5.1  6.1]]\n",
+      "\n",
+      "  [[ 7.1  8.1  9.1]\n",
+      "   [10.1 11.1 12.1]]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "array_4Dimentions = newArray.reshape(1, 2, 2, 3)            # Reshape the array to 4-D\n",
+    "\n",
+    "print(\"New array's dimension:\", array_4Dimentions.ndim)     # Print the new array's dimension and shape\n",
+    "print(\"New array's shape:\", array_4Dimentions.shape)\n",
+    "print(\"The 4 Dimenations araay : \\n\", array_4Dimentions)    # we can see there is an extra square bracket which is represent the new dimension"
    ]
   },
   {
@@ -121,12 +210,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "8135b045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[ 1  2  3]\n",
+      "   [ 4  5  6]]\n",
+      "\n",
+      "  [[ 7  8  9]\n",
+      "   [10 11 12]]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "array_int = array_4Dimentions.astype(int)       # Change the array elements datatype to integer \n",
+    "\n",
+    "print(array_int)                       # Print the new array"
    ]
   },
   {
@@ -142,12 +247,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "a0d58d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 11 12 "
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "for element in np.nditer(array_int):\n",
+    "    print(element, end =' ')"
    ]
   },
   {
@@ -161,12 +277,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "id": "6e12e2d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "By using only the first index:\n",
+      " [[[ 1  2  3]\n",
+      "  [ 4  5  6]]\n",
+      "\n",
+      " [[ 7  8  9]\n",
+      "  [10 11 12]]] \n",
+      "\n",
+      "By using the two indexes:\n",
+      " [[ 7  8  9]\n",
+      " [10 11 12]] \n",
+      "\n",
+      "By using the three indexes:\n",
+      " [7 8 9] \n",
+      "\n",
+      "By using the four indexes:\n",
+      " 8\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "# we can access any element in the array by following this technique:\n",
+    "\n",
+    "print(\"By using only the first index:\\n\", array_int[0], \"\\n\")\n",
+    "print(\"By using the two indexes:\\n\", array_int[0, 1], \"\\n\")\n",
+    "print(\"By using the three indexes:\\n\", array_int[0, 1, 0], \"\\n\")\n",
+    "print(\"By using the four indexes:\\n\", array_int[0, 1, 0, 1])        # by following this approach we will reach any element that we want\n"
    ]
   },
   {
@@ -180,12 +326,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "id": "c3218bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accessing the number 5 :\n",
+      " 5\n",
+      "Accessing the number 6 :\n",
+      " 6\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "print(\"Accessing the number 5 :\\n\", array_int[0, 0, 1, 1]) \n",
+    "print(\"Accessing the number 6 :\\n\", array_int[0, 0, 1, 2]) \n"
    ]
   },
   {
@@ -203,12 +363,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "id": "ddaf0146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index of number 8: (array([0], dtype=int64), array([1], dtype=int64), array([0], dtype=int64), array([1], dtype=int64))\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "index_of_8 = np.where(array_int == 8)\n",
+    "\n",
+    "# Print the indices\n",
+    "print(\"index of number 8:\", index_of_8)"
    ]
   },
   {
@@ -231,12 +404,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "id": "d9b632bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2]\n",
+      "  [ 3  4]\n",
+      "  [ 5  6]]\n",
+      "\n",
+      " [[ 7  8]\n",
+      "  [ 9 10]\n",
+      "  [11 12]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "reshaped_array = array_int.reshape(2, 3, 2)\n",
+    "\n",
+    "print(reshaped_array)"
    ]
   },
   {
@@ -252,12 +443,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "id": "d6acdeaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B']\n",
+      " ['E' 'F']\n",
+      " ['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined_array = np.concatenate((arr1, arr2))\n",
+    "\n",
+    "print(joined_array)\n"
    ]
   },
   {
@@ -270,12 +481,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "id": "b849658c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B' 'C' 'D']\n",
+      " ['E' 'F' 'G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "joined_array = np.concatenate((arr1, arr2), axis=1)\n",
+    "\n",
+    "print(joined_array)"
    ]
   },
   {
@@ -289,12 +513,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 88,
    "id": "7f7f5e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first array : \n",
+      " [['A' 'B']\n",
+      " ['E' 'F']]\n",
+      "The second array : \n",
+      " [['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "split_arrays = np.split(joined_array, 2, axis=1)\n",
+    "\n",
+    "print(\"The first array : \\n\", split_arrays[0])\n",
+    "print(\"The second array : \\n\", split_arrays[1])\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -314,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
