--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np\n"
    ]
   },
   {
@@ -33,7 +33,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np\n",
+    "\n",
+    "# Generate a sequence of 15 floats\n",
+    "seq = np.linspace(start=1.0, stop=10.0, num=15)\n",
+    "\n",
+    "print(seq)\n"
    ]
   },
   {
@@ -59,7 +64,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np\n",
+    "\n",
+    "# Define the arrays arr1, arr2, arr3, and arr4\n",
+    "arr1 = np.array([1.1, 2.1, 3.1])\n",
+    "arr2 = np.array([4.1, 5.1, 6.1])\n",
+    "arr3 = np.array([7.1, 8.1, 9.1])\n",
+    "arr4 = np.array([10.1, 11.1, 12.1])\n",
+    "\n",
+    "# Create the 3-D array\n",
+    "three_d_array = np.array([\n",
+    "    [arr1, arr2],\n",
+    "    [arr3, arr4]\n",
+    "])\n",
+    "\n",
+    "print(three_d_array)\n"
    ]
   },
   {
@@ -83,7 +102,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Array's type:\", type(three_d_array))\n",
+    "\n",
+    "# Print the array's elements datatype\n",
+    "print(\"Array's elements datatype:\", three_d_array.dtype)\n",
+    "\n",
+    "# Print the array's shape\n",
+    "print(\"Array's shape:\", three_d_array.shape)\n",
+    "\n",
+    "# Print the array's size\n",
+    "print(\"Array's size:\", three_d_array.size)\n",
+    "\n",
+    "# Print the array's dimension\n",
+    "print(\"Array's dimension:\", three_d_array.ndim)"
    ]
   },
   {
@@ -104,7 +135,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# Reshape the array to 4-D\n",
+    "four_d_array = three_d_array.reshape(1, *three_d_array.shape)\n",
+    "\n",
+    "# Print the new array's dimension and shape\n",
+    "print(\"New array's dimension:\", four_d_array.ndim)\n",
+    "print(\"New array's shape:\", four_d_array.shape)"
    ]
   },
   {
@@ -126,7 +162,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# Change the array's elements datatype to integer\n",
+    "int_array = four_d_array.astype(int)\n",
+    "\n",
+    "# Print the new array\n",
+    "print(int_array)"
    ]
   },
   {
@@ -147,7 +187,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Array's elements:\")\n",
+    "for element in np.nditer(int_array):\n",
+    "    print(element)"
    ]
   },
   {
@@ -166,7 +208,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# Print number 8 using array slicing\n",
+    "print(\"Number 8:\", four_d_array[0, 1, 0, 1])"
    ]
   },
   {
@@ -185,7 +228,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Number 5:\", four_d_array[0, 0, 1, 1])\n",
+    "print(\"Number 6:\", four_d_array[0, 0, 1, 2])"
    ]
   },
   {
@@ -208,7 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# Search for number 8 using np.where()\n",
+    "indices = np.where(four_d_array == 8)"
    ]
   },
   {
@@ -236,7 +281,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# Reshape the array as specified\n",
+    "reshaped_array = three_d_array.reshape(2, 3, 2)\n",
+    "\n",
+    "# Print the reshaped array\n",
+    "print(reshaped_array)"
    ]
   },
   {
@@ -257,7 +306,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^# Define the arrays arr1 and arr2\n",
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "# Join the arrays without specifying the axis\n",
+    "joined_array = np.concatenate((arr1, arr2))\n",
+    "\n",
+    "# Print the joined array\n",
+    "print(joined_array)"
    ]
   },
   {
@@ -275,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "joined_array = np.concatenate((arr1, arr2), axis=1)"
    ]
   },
   {
@@ -294,7 +351,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# Split the array into two arrays along axis=1\n",
+    "split_arrays = np.split(joined_array, 2, axis=1)\n",
+    "\n",
+    "# Print the split arrays\n",
+    "for idx, arr in enumerate(split_arrays):\n",
+    "    print(f\"Array {idx + 1}:\")\n",
+    "    print(arr)"
    ]
   }
  ],
