--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -25,7 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "x = np.ones(shape=(5,))  \n",
+    "print(x)"
    ]
   },
   {
@@ -41,9 +42,21 @@
    "execution_count": null,
    "id": "9550b063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.9' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'c:/Users/HP/AppData/Local/Programs/Python/Python311/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "y = np.zeros(shape=(5,))  # This will create an array of 5 elements, each equal to 0\n",
+    "print(y)"
    ]
   },
   {
@@ -61,7 +74,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "x = np.ones(shape=(5,))\n",
+    "y = np.zeros(shape=(5,))\n",
+    "\n",
+    "result = np.add(x, y)\n",
+    "print(result)  \n"
    ]
   },
   {
@@ -79,7 +98,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "x = np.ones(shape=(5,))\n",
+    "\n",
+    "# Print array characteristics\n",
+    "print(\"Dimension of x array:\", x.ndim)\n",
+    "print(\"Shape of x array:\", x.shape)\n",
+    "print(\"Size of x array:\", x.size)\n",
+    "print(\"Type of elements in x array:\", x.dtype)\n"
    ]
   },
   {
@@ -103,7 +130,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^import numpy as np\n",
+    "\n",
+    "w = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "print(w)"
    ]
   },
   {
@@ -121,7 +152,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "z = np.arange(1, 4)\n",
+    "\n",
+    "print(z)"
    ]
   },
   {
@@ -139,7 +174,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "z = np.arange(1, 4)\n",
+    "w = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "print(newArray)\n"
    ]
   },
   {
@@ -157,7 +199,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "#\n",
+    "z = np.arange(1, 4)\n",
+    "w = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "\n",
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "\n",
+    "for row in newArray:\n",
+    "    for element in row:\n",
+    "        print(element, end=\" \")\n",
+    "    print()  "
    ]
   },
   {
@@ -175,7 +230,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "# Define z and w arrays\n",
+    "z = np.arange(1, 4)\n",
+    "w = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "# Combine arrays z and w horizontally\n",
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "# Reverse the rows and columns of newArray\n",
+    "newArray_reversed = np.flip(newArray, axis=0)\n",
+    "newArray_reversed = np.flip(newArray_reversed, axis=1)\n",
+    "\n",
+    "print(newArray_reversed)"
    ]
   },
   {
@@ -193,7 +261,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "# Define z and w arrays\n",
+    "z = np.arange(1, 4)\n",
+    "w = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "# Combine arrays z and w horizontally\n",
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "# Decrement all elements of newArray by 1\n",
+    "newArray -= 1\n",
+    "\n",
+    "print(newArray)"
    ]
   },
   {
@@ -211,7 +291,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "\n",
+    "z = np.arange(1, 4)\n",
+    "w = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "\n",
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "\n",
+    "smallest_value = np.min(newArray)\n",
+    "largest_value = np.max(newArray)\n",
+    "\n",
+    "print(\"Smallest value:\", smallest_value)\n",
+    "print(\"Largest value:\", largest_value)\n"
    ]
   },
   {
@@ -229,7 +323,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "# Define z and w arrays\n",
+    "z = np.arange(1, 4)\n",
+    "w = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "# Combine arrays z and w horizontally\n",
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "# Print the first row of newArray\n",
+    "first_row = newArray[0]\n",
+    "print(\"First row:\", first_row)\n"
    ]
   },
   {
@@ -247,7 +352,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "\n",
+    "z = np.arange(1, 4)\n",
+    "w = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "\n",
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "\n",
+    "\n",
+    "index = np.where(newArray == 12)\n",
+    "\n",
+    "\n",
+    "if index[0].size != 0:\n",
+    "    print(\"Number equals 12:\", newArray[index[0][0], index[1][0]])\n",
+    "else:\n",
+    "    print(\"Number equals 12 not found in newArray.\")\n"
    ]
   },
   {
@@ -265,7 +387,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "# Define z and w arrays\n",
+    "z = np.arange(1, 4)\n",
+    "w = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "# Combine arrays z and w horizontally\n",
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "# Find the indices of the elements equals 0 and 13 in newArray\n",
+    "indices_0 = np.where(newArray == 0)\n",
+    "indices_13 = np.where(newArray == 13)\n",
+    "\n",
+    "# Print the numbers equals 0 and 13 from newArray\n",
+    "if indices_0[0].size != 0:\n",
+    "    print(\"Number equals 0:\", newArray[indices_0[0][0], indices_0[1][0]])\n",
+    "else:\n",
+    "    print(\"Number equals 0 not found in newArray.\")\n",
+    "\n",
+    "if indices_13[0].size != 0:\n",
+    "    print(\"Number equals 13:\", newArray[indices_13[0][0], indices_13[1][0]])\n",
+    "else:\n",
+    "    print(\"Number equals 13 not found in newArray.\")\n"
    ]
   },
   {
@@ -283,7 +427,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "# Define z and w arrays\n",
+    "z = np.arange(1, 4)\n",
+    "w = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "# Combine arrays z and w horizontally\n",
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "# Find the indices of the elements equals 0 and 13 in newArray\n",
+    "indices_0 = np.where(newArray == 0)\n",
+    "indices_13 = np.where(newArray == 13)\n",
+    "\n",
+    "# Print the numbers equals 0 and 13 from newArray\n",
+    "if indices_0[0].size != 0:\n",
+    "    print(\"Number equals 0:\", newArray[indices_0[0][0], indices_0[1][0]])\n",
+    "else:\n",
+    "    print(\"Number equals 0 not found in newArray.\")\n",
+    "\n",
+    "if indices_13[0].size != 0:\n",
+    "    print(\"Number equals 13:\", newArray[indices_13[0][0], indices_13[1][0]])\n",
+    "else:\n",
+    "    print(\"Number equals 13 not found in newArray.\")\n"
    ]
   },
   {
@@ -301,7 +467,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "\n",
+    "# Define z and w arrays\n",
+    "z = np.arange(1, 4)\n",
+    "w = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "# Combine arrays z and w horizontally\n",
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "# Change the shape of newArray to (3, 3)\n",
+    "newArray_reshaped = newArray.reshape(3, 3)\n",
+    "\n",
+    "print(newArray_reshaped)\n"
    ]
   },
   {
@@ -329,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
