--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -25,7 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "x = np.ones(shape=(3,))\n",
+    "print(x)"
    ]
   },
   {
@@ -43,7 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "y = np.zeros(shape=(3,))\n",
+    "print(y)"
    ]
   },
   {
@@ -61,7 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "result = x + y\n",
+    "print(result)"
    ]
   },
   {
@@ -79,7 +82,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Dimension:\", x.ndim)\n",
+    "print(\"Shape:\", x.shape)\n",
+    "print(\"Size:\", x.size)\n",
+    "print(\"Type:\", x.dtype)"
    ]
   },
   {
@@ -103,7 +109,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "print(w)"
    ]
   },
   {
@@ -121,7 +131,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "z = np.array([1, 2, 3])\n",
+    "print(z)"
    ]
   },
   {
@@ -139,7 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "print(newArray)"
    ]
   },
   {
@@ -157,7 +169,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "for row in newArray:\n",
+    "    for n in row:\n",
+    "        print(n, end=\" \")\n",
+    "    print()"
    ]
   },
   {
@@ -175,7 +190,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "reverse_array = newArray[::-1, ::-1]\n",
+    "print(reverse_array)"
    ]
   },
   {
@@ -193,7 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "dec_array = newArray - 1\n",
+    "print(dec_array)"
    ]
   },
   {
@@ -211,7 +228,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "smallest = np.min(newArray)\n",
+    "biggest = np.max(newArray)\n",
+    "\n",
+    "print(smallest)\n",
+    "print(biggest)"
    ]
   },
   {
@@ -229,7 +250,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "firstRow = newArray[0]\n",
+    "print(firstRow)"
    ]
   },
   {
@@ -247,7 +269,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "indexNum = np.where(newArray == 12)\n",
+    "\n",
+    "print(indexNum)"
    ]
   },
   {
@@ -265,7 +289,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "indexes = np.where((newArray == 0) & (newArray == 13))\n",
+    "numbers = newArray[indexes]\n",
+    "\n",
+    "print(numbers)"
    ]
   },
   {
@@ -283,7 +310,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "change_shape = newArray.reshape((9, 1))\n",
+    "\n",
+    "print(change_shape.shape)"
    ]
   },
   {
@@ -291,7 +320,7 @@
    "id": "e6d104c5",
    "metadata": {},
    "source": [
-    "## Q#16: Change the shape of \"newArray\" to (3,2)."
+    "## Q#16: Change the shape of \"newArray\" to (3,3)."
    ]
   },
   {
@@ -301,7 +330,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "change_shape = newArray.reshape((3, 3))\n",
+    "\n",
+    "print(change_shape.shape)"
    ]
   },
   {
